Increasing MaxPermSize to 128 MB with surefire