@@ -17,6 +17,7 @@
   <!-- Properties -->
   <properties>
     <surefire.security.args>-Djava.security.manager -Djava.security.policy=src/test/etc/tst.policy</surefire.security.args>
+    <surefire.memory.args>-Xmx512m -XX:MaxPermSize=128m</surefire.memory.args>
     <surefire.jdwp.args>-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005</surefire.jdwp.args>
     <test.archive.directory>${project.build.directory}/test-libs</test.archive.directory>
     <test.classes.directory>${project.build.directory}/test-classes</test.classes.directory>
@@ -240,7 +241,7 @@
         </property>
       </activation>
       <properties>
-        <surefire.jvm.args>${surefire.security.args} ${surefire.jdwp.args}</surefire.jvm.args>
+        <surefire.jvm.args>${surefire.security.args} ${surefire.memory.args} ${surefire.jdwp.args}</surefire.jvm.args>
       </properties>
     </profile>
     <profile>
@@ -251,7 +252,7 @@
         </property>
       </activation>
       <properties>
-        <surefire.jvm.args>${surefire.security.args}</surefire.jvm.args>
+        <surefire.jvm.args>${surefire.security.args} ${surefire.memory.args}</surefire.jvm.args>
       </properties>
     </profile>
     
